rns-lang/test_data/integration_to_be_migrated/error/parser/outside_class_directive/dot_super.ja
; comment before the directive
.super java/lang/Object
.class public HelloWorld
